tests/NormalTests/paczka1/small_fuzzy/82021539.err
Error in line 2: 9gg8d A852 29,68
Error in line 5: O7cPbj A372 93,1
Error in line 7: O7cPbj A566 7,8
Error in line 10: yvgKRV A372 30,3
